# Database-with-Files

./: 20160172-20160195-G#7.cbp  20160172-20160195-G#7.depend  20160172-20160195-G#7.layout  20160172_20160195_G#7.cbp  20160172_20160195_G#7.depend  20160172_20160195_G#7.layout  Authors.txt  AuthorsList.txt  AuthorsPIndex.txt  AuthorsSIndex.txt  Books.txt  BooksList.txt  BooksPIndex.txt  BooksSIndex.txt  CMakeLists.txt  Database-with-Files.rar  main.cpp
include/: Authors.h  Books.h
src/: Authors.cpp  Books.cpp
