cmake_minimum_required(VERSION 3.9)
project(assignment_2)

set(CMAKE_CXX_STANDARD 11)

add_executable(assignment_2
        include/Authors.h
        include/Books.h
        src/Authors.cpp
        src/Books.cpp
        "20160172_20160195_G#7.cbp"
        "20160172_20160195_G#7.depend"
        "20160172_20160195_G#7.layout"
        main.cpp)
